# LocalShaderToy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  test_multipass_config.json  test_shader.glsl
docs/: PROJECT_OVERVIEW.md
profiles/test_iDate/: image.glsl
scripts/: setup_dependencies.py
shaders/examples/: default.glsl  raymarching.glsl
src/: main.cpp
src/core/: Application.cpp  Application.h  ProjectManager.cpp  ProjectManager.h  ScreensaverMode.cpp  ScreensaverMode.h  ShaderEngine.cpp  ShaderEngine.h  ShaderProject.cpp  ShaderProject.h  UniformManager.cpp  UniformManager.h
src/input/: ResourceLoader.cpp  ResourceLoader.h
src/renderer/: BufferManager.cpp  BufferManager.h  Framebuffer.cpp  Framebuffer.h  MultiPassRenderer.cpp  MultiPassRenderer.h  NoiseGenerator.cpp  NoiseGenerator.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/transpiler/: GLSLTranspiler.cpp  GLSLTranspiler.h
src/ui/: ImGuiCompat.h  ShaderEditor.cpp  ShaderEditor.h  UIManager.cpp  UIManager.h
src/utils/: FileDialog.cpp  FileDialog.h  FileUtils.cpp  FileUtils.h  Timer.cpp  Timer.h
